# sai

./: .env.example  .gitignore  MANIFEST.in  MIGRATION.md  Makefile  README.md  build_package.py  overlay_assistant.py  pyproject.toml  requirements.txt  run.sh  setup.py  show_overlay.py  test_basic.py
.claude/: settings.local.json
sai/: __init__.py  __main__.py  audio.py  claude_client.py  cli.py  config.py  main.py  setup.py  ui.py  ui_updater.py
